--- a/config/database.yml
+++ b/config/database.yml
@@ -17,14 +17,14 @@ deploy: &deploy
 
 development:
   <<: *default
-  db: db/development.sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  db: db/test.sqlite3
+  database: db/test.sqlite3
 
 production:
   <<: *default
