--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,9 @@ pickle-email-*.html
 *.log
 tmp/**/*
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
-config/initializers/secret_token.rb
-config/secrets.yml
-config/settings.yml
-
 ## Environment normalisation:
 /.bundle
 /vendor/bundle
+
+# Ignore application configuration
+/config/application.yml
